Fix T57896: Crash updating grease pencil material preview